# Kraken

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  Justfile  LICENSE  Makefile  README.md  SECURITY.md  rust-toolchain.toml  sample-implant.toml  tarpaulin.toml
benches/: Cargo.toml
benches/benches/: crypto.rs  mesh.rs  module.rs
benches/src/: helpers.rs  lib.rs
crates/config/: Cargo.toml
crates/config/src/: bake.rs  lib.rs  profile.rs  profile_compile.rs  types.rs
crates/config/src/snapshots/: config__snapshot_tests__default_implant_config_json.snap  config__snapshot_tests__default_implant_config_toml.snap  config__snapshot_tests__full_implant_config_toml.snap  config__snapshot_tests__transform_types.snap  config__snapshot_tests__transport_types.snap
crates/crypto/: Cargo.toml
crates/crypto/src/: aes_gcm.rs  hkdf.rs  implant.rs  lib.rs  mtls.rs  server.rs  tests.rs  types.rs  x25519.rs
crates/db/: Cargo.toml
crates/db/src/: lib.rs  models.rs  persistence_tests.rs
crates/db/src/repos/: audit.rs  chat.rs  config.rs  file_transfer.rs  implant.rs  job.rs  listener.rs  loot.rs  mod.rs  modules.rs  operator.rs  task.rs
crates/db/tests/: migration_tests.rs
crates/implant-core/: Cargo.toml
crates/implant-core/src/: error.rs  jobs.rs  lib.rs  main.rs  registry.rs  runtime.rs  sysinfo.rs
crates/implant-core/src/evasion/: anti_debug.rs  anti_vm.rs  heap_encrypt.rs  imports.rs  indirect_syscall.rs  mod.rs  module_encrypt.rs  sleep_mask.rs  stack_spoof.rs  syscall.rs
crates/implant-core/src/tasks/: bof_module.rs  file.rs  inject_module.rs  mesh_module.rs  mod.rs  module_loader.rs  shell.rs  shell_module.rs  socks_module.rs  token_module.rs
crates/implant-core/src/transport/: chain.rs  dns.rs  http.rs  icmp.rs  mod.rs  websocket.rs
crates/implant-core/tests/: module_compliance.rs  module_dispatch.rs
crates/implant-loader/: Cargo.toml  build.rs
crates/implant-loader/src/: encrypt.rs  lib.rs  memory.rs  secure.rs  verify.rs
crates/implant-modules/mod-ad/: Cargo.toml
crates/implant-modules/mod-ad/src/: asreproast.rs  computers.rs  groups.rs  kerberoast.rs  kerberos.rs  ldap.rs  lib.rs  users.rs
crates/implant-modules/mod-audio/: Cargo.toml
crates/implant-modules/mod-audio/src/: lib.rs
crates/implant-modules/mod-bof/: Cargo.toml
crates/implant-modules/mod-bof/src/: args.rs  beacon_api.rs  coff.rs  lib.rs  loader.rs
crates/implant-modules/mod-browser/: Cargo.toml
crates/implant-modules/mod-browser/src/: chrome.rs  decrypt.rs  edge.rs  firefox.rs  lib.rs
crates/implant-modules/mod-clipboard/: Cargo.toml
crates/implant-modules/mod-clipboard/src/: lib.rs  ops.rs
crates/implant-sim/: Cargo.toml
crates/implant-sim/src/: lib.rs  main.rs
crates/implant-stager/: Cargo.toml
crates/implant-stager/src/: api_hash.rs  config.rs  error.rs  execute.rs  fetch.rs  lib.rs  main.rs  pic.rs
crates/kraken-audit/: Cargo.toml
crates/kraken-audit/src/: lib.rs
crates/kraken-distributed/: Cargo.toml
crates/kraken-distributed/src/: controller.rs  error.rs  lib.rs  node.rs  raft.rs  sync.rs
crates/kraken-distributed/tests/: cluster_integration.rs
crates/kraken-rbac/: Cargo.toml
crates/kraken-rbac/src/: lib.rs
crates/kraken-redirector/: Cargo.toml
crates/kraken-redirector/src/: azure.rs  certs.rs  cloudflare.rs  lambda.rs  lib.rs  main.rs  nginx.rs
crates/kraken-redirector/templates/: docker-compose.yml.template  nginx.conf.template
crates/kraken-report/: Cargo.toml
crates/kraken-report/src/: export.rs  lib.rs  types.rs
crates/loot-stress/: Cargo.toml
crates/loot-stress/src/: main.rs
crates/mesh/: Cargo.toml
crates/mesh/src/: error.rs  lib.rs  link.rs  message.rs  role.rs  router.rs
crates/module-store/: Cargo.toml
crates/module-store/src/: compiler.rs  lib.rs  signing.rs
crates/operator/: Cargo.toml
crates/operator/src/: cli.rs  client.rs  cred_export.rs  display.rs  file_browser.rs  history.rs  lib.rs  main.rs  process_tree.rs  theme.rs
crates/operator/src/commands/: ad.rs  audio.rs  bof.rs  browser.rs  clipboard.rs  collab.rs  creds.rs  env.rs  inject.rs  interact.rs  jobs.rs  keylog.rs  lateral.rs  listeners.rs  loot.rs  mesh.rs  mod.rs  modules.rs  ntlm_relay.rs  operator.rs  operators.rs  payload.rs  persist.rs  rdp.rs  reg.rs  report.rs  scan.rs  sessions.rs  socks.rs  svc.rs  tasks.rs  usb.rs  webcam.rs
crates/payload-builder/: Cargo.toml
crates/payload-builder/src/: dll.rs  dll_loader_template.c  encode.rs  encrypt.rs  lib.rs  main.rs  powershell.rs  service.rs  shellcode.rs  sideload_targets.rs
crates/payload-builder/src/stub/: mod.rs  x64_stub.rs  x86_stub.rs
crates/protocol/: Cargo.toml  build.rs
crates/protocol/src/: convert.rs  helpers.rs  lib.rs  proptests.rs
crates/protocol/src/snapshots/: protocol__snapshot_tests__checkin_default.snap  protocol__snapshot_tests__checkin_populated.snap  protocol__snapshot_tests__checkin_response_default.snap  protocol__snapshot_tests__checkin_response_with_tasks.snap  protocol__snapshot_tests__task_statuses.snap  (+1 more)
crates/server/: Cargo.toml
crates/server/src/: auth.rs  collab.rs  dns.rs  error.rs  lib.rs  main.rs  mocks.rs  socks_server.rs  state.rs  websocket.rs
crates/server/tests/: all_services_test.rs  auth_flow_integration.rs  chaos_resilience_tests.rs  e2e_test.rs  grpc_integration.rs  loot_service_integration.rs  memory_tests.rs  mesh_integration.rs  network_resilience_tests.rs  performance_baseline.rs  phase5_integration.rs  rbac_integration_tests.rs  scale_tests.rs  security_boundary_tests.rs  socks_integration_tests.rs  stress_tests.rs  tls_integration.rs
crates/task-cli/: Cargo.toml
crates/task-cli/src/: lib.rs  main.rs
fuzz/: Cargo.toml
fuzz/fuzz_targets/: crypto_decrypt.rs  module_blob.rs  protocol_frame.rs  task_sequence.rs
tests/integration/: Cargo.toml  implant_lifecycle.rs  memory_safety.rs  module_hotreload.rs  phase3_modules.rs  phase4_opsec.rs  phase5_mesh.rs  phase9_professional.rs  stress_tests.rs
tests/live/: Cargo.toml
tests/live/src/: harness.rs  live_e2e.rs  live_edge_cases.rs  live_mesh.rs  live_modules.rs
(+342 files in other folders)
