[workspace]
resolver = "2"
exclude = ["fuzz"]
members = [
    "crates/common",
    "crates/protocol",
    "crates/crypto",
    "crates/config",
    "crates/db",
    "crates/server",
    "crates/operator",
    "crates/implant-core",
    "crates/implant-sim",
    "crates/task-cli",
    "crates/implant-loader",
    "crates/obfuscation",
    "crates/implant-modules/mod-file",
    "crates/implant-modules/mod-shell",
    "crates/implant-modules/mod-evasion",
    "crates/implant-modules/mod-mesh",
    "crates/implant-modules/mod-inject",
    "crates/implant-modules/mod-token",
    "crates/implant-modules/mod-dns",
    "crates/implant-modules/mod-bof",
    "crates/implant-modules/mod-proc",
    "crates/implant-modules/mod-socks",
    "crates/implant-modules/mod-dotnet",
    "crates/implant-modules/mod-screenshot",
    "crates/implant-modules/mod-clipboard",
    "crates/implant-modules/mod-reg",
    "crates/implant-modules/mod-persist",
    "crates/implant-modules/mod-svc",
    "crates/implant-modules/mod-keylog",
    "crates/implant-modules/mod-scan",
    "crates/implant-modules/mod-env",
    "crates/implant-modules/mod-ad",
    "crates/implant-modules/mod-lateral",
    "crates/implant-modules/mod-creds",
    "crates/implant-stager",
    "crates/mesh",
    "crates/loot",
    "crates/loot-stress",
    "crates/module-store",
    "tests/integration",
    "crates/kraken-rbac",
    "crates/kraken-audit",
    "crates/kraken-report",
    "crates/kraken-redirector",
    "crates/payload-builder",
    "crates/kraken-distributed",
    "benches",
    "tests/external",
    "tests/live",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "MIT"
repository = "https://github.com/kraken-c2/kraken"

[workspace.dependencies]
# Async
tokio = { version = "1.35", features = ["full"] }

# gRPC/Protobuf
tonic = { version = "0.11", features = ["tls"] }
prost = "0.12"
prost-types = "0.12"

# HTTP
axum = "0.7"
axum-server = "0.6"
reqwest = { version = "0.11", default-features = false, features = ["rustls-tls"] }

# Database
sqlx = { version = "0.7", features = ["runtime-tokio", "sqlite"] }

# Crypto
ring = "0.17"
zeroize = { version = "1.7", features = ["derive"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
base64 = "0.21"
hex = "0.4"

# CLI
clap = { version = "4.4", features = ["derive", "env"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["json", "env-filter"] }
tracing-appender = "0.2"

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Benchmarking (pinned for Rust 1.75 compat)
criterion = { version = "0.5.1", default-features = false, features = ["cargo_bench_support"] }

# === TESTING (Best Practices) ===
# Property-based testing
proptest = "1.4"
proptest-derive = "0.4"

# Mocking
mockall = "0.12"

# Async test utilities
tokio-test = "0.4"

# Snapshot testing
insta = { version = "1.34", features = ["json", "yaml"] }

# Test isolation for global state
serial_test = "3.0"

# Test utilities
test-case = "3.3"

# Misc
hex-literal = "0.4"
# Pin time to avoid edition2024 requirement on Rust 1.75
time = "=0.3.36"
chrono = { version = "0.4", default-features = false, features = ["serde", "clock", "std"] }
uuid = { version = "=1.6.1", features = ["v4", "serde"] }
rand = "0.8"

# Build
tonic-build = "0.11"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true

[profile.release-implant]
inherits = "release"
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"
strip = true
