[package]
name = "config"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
serde.workspace = true
serde_json.workspace = true
toml.workspace = true
thiserror.workspace = true
sha2 = "0.10"
hex.workspace = true

[dev-dependencies]
insta = { workspace = true }
