[package]
name = "db"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
kraken-rbac = { path = "../kraken-rbac" }
sqlx = { workspace = true, features = ["runtime-tokio", "sqlite"] }
tokio.workspace = true
thiserror.workspace = true
chrono.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
uuid = { workspace = true, features = ["v4"] }

[dev-dependencies]
tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
tempfile = "3.10"
