[package]
name = "implant-loader"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
ring = "0.17"
chrono = { version = "0.4", default-features = false, features = ["std"] }
libc = "0.2"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = ["Win32_System_Memory"] }

[build-dependencies]
