[package]
name = "kraken-distributed"
version = "0.1.0"
edition = "2021"

[dependencies]
common = { path = "../common" }
tokio = { workspace = true, features = ["sync", "time", "macros"] }
chrono = { workspace = true }
uuid = { workspace = true, features = ["v4"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
thiserror = { workspace = true }
tracing = { workspace = true }
rand = { workspace = true }
[dev-dependencies]
tokio-test = { workspace = true }
proptest = { workspace = true }

[[test]]
name = "cluster_integration"
path = "tests/cluster_integration.rs"
