[package]
name = "kraken-redirector"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Deployment tooling for Kraken C2 redirector infrastructure"

[[bin]]
name = "kraken-redirector"
path = "src/main.rs"

[dependencies]
clap = { workspace = true }
serde = { workspace = true }
serde_json.workspace = true
toml.workspace = true
anyhow.workspace = true
thiserror.workspace = true

# Certificate generation
rcgen = "0.12"
time = { version = "=0.3.36", features = ["formatting"] }

# Filesystem / templating
chrono.workspace = true

[dev-dependencies]
tempfile = "3"
