[package]
name = "loot-stress"
version = "0.1.0"
edition = "2021"
publish = false

[[bin]]
name = "loot-stress"
path = "src/main.rs"

[dependencies]
protocol = { path = "../protocol" }
tokio = { version = "1.35", features = ["full"] }
tonic = { version = "0.11" }
uuid = { version = "1.6", features = ["v4"] }
chrono = { version = "0.4" }
clap = { version = "4.4", features = ["derive"] }
rand = "0.8"
