[package]
name = "operator"
version.workspace = true
edition.workspace = true

[[bin]]
name = "kraken-operator"
path = "src/main.rs"

[dependencies]
common = { path = "../common" }
protocol = { path = "../protocol" }
tonic.workspace = true
tokio.workspace = true
clap.workspace = true
anyhow.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono.workspace = true
hex.workspace = true
tracing-appender.workspace = true
prost.workspace = true
uuid.workspace = true
ring.workspace = true

# CLI dependencies
rustyline = "13.0"
comfy-table = "6.2"
console = "0.15"
shellwords = "1.1"
dirs = "5.0"
serde_json.workspace = true

[dev-dependencies]
tempfile = "3.8"
