[package]
name = "protocol"
version.workspace = true
edition.workspace = true

[dependencies]
common = { path = "../common" }
prost.workspace = true
prost-types.workspace = true
tonic = { workspace = true, optional = true }
bytes = "1.5"
chrono.workspace = true

[dev-dependencies]
proptest = { workspace = true }
insta = { workspace = true }

[build-dependencies]
tonic-build.workspace = true

[features]
default = ["grpc"]
grpc = ["dep:tonic"]
