[package]
name = "mod-clipboard"
version = "0.1.0"
edition = "2021"
description = "Kraken clipboard operations module"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
common = { path = "../../common" }
protocol = { path = "../../protocol", default-features = false }
prost = "0.12"
tracing = "0.1"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_DataExchange",
    "Win32_System_Memory",
    "Win32_UI_WindowsAndMessaging",
] }

[features]
default = []
dynamic-entry = []
